<resources>
  <string name="app_name">Vocab Flashcards</string>
  <string name="navigation_drawer_open">Open navigation drawer</string>
  <string name="navigation_drawer_close">Close navigaiton</string>
  <string name="action_settings">Settings</string>
  <string name="ok">OK</string>
  <string name="cancel">Cancel</string>
  <string name="learnt">Learnt</string>
  <string name="ignored">Ignore</string>
  <string name="bookmark">Bookmark</string>
  <string name="review_my_learnt_words">Review My Learnt Words</string>
  <string name="review_new_words">Explore New Words</string>
  <string name="review_my_favorite_words">Review My Favorite Words</string>
  <string name="card_examples_label"><u>Example</u></string>
  <string name="nav_card_flip">Flip</string>
  <string name="landing_menu_learn_title">Learn Words</string>
  <string name="landing_menu_take_quize_title">Take Quiz</string>
  <string name="landing_menu_learn_subtitle">Want to referesh your vocabulary?</string>
  <string name="title_activity_settings">Settings</string>
  <string name="landing_menu_settings_title">Settings</string>
  <string name="landing_menu_settings_subtitle">Change learning specific settings</string>
  <string name="landing_menu_profile_title">Profile</string>
  <string name="landing_menu_profile_subtitle">See your progress</string>
  <string name="yes">Yes</string>
  <string name="quiz_cancel_dialog_title">Exit Quiz</string>
  <string name="quiz_cancel_dialog_content">Are you sure you want to exit this session? Your progress will not be saved.</string>
  <string name="settings_learning_title">Learning Settings</string>
  <string name="settings_words_per_learning_session">Words per learning session</string>
  <string name="settings_quiz_title">Quiz Settings</string>
  <string name="settings_words_per_quiz_session">Words per quizLimit session</string>
  <string name="not_enough_new_word_title">Not enough words!</string>
  <string name="not_enough_new_word_content">There is no not enough words in this category.</string>
  <string name="settings_answer_per_quiz">Maximum answers per question</string>
  <string name="result_examine_your_wrong_answers">Examine your wrong answers</string>
  <string name="result_explore_new_words">Explore new words</string>
  <string name="correct">Correct</string>
  <string name="wrong">Wrong</string>
  <string name="result_item_your_answered_title">Your answer :</string>
  <string name="landing_menu_quiz_subtitle">Feeling confident? Take a quiz now!</string>
  <string name="voice_not_available">We can not find audio file for this word !</string>
  <string name="resutl_quiz_again_title">Quiz again!</string>
  <string name="quiz_type">Quiz Type : </string>
  <string name="word_to_word">Word to Word</string>
  <string name="word_to_defination">Word to Defination</string>
  <string name="logout_title">Leave</string>
  <string name="logout_content">Do you really want to leave the app :(</string>
  <string name="loading_words_content">Looking for new words …</string>
  <string name="internet_not_available">Internet not available, turn on internet to synchronize new words.</string>
  <string name="internet_connection_error_title">Internet Connection</string>
  <string name="internet_not_found_content">Source Not Found</string>
  <string name="internet_server_not_found_content">Unexpected error was happened in server. please try again after a minute</string>
  <string name="close">Close</string>
  <string name="next">Next</string>
  <string name="showcase_learnt_title">My Learnt Words</string>
  <string name="showcase_learnt_content">From here you can add your learned words to your own archive</string>
  <string name="showcase_ignore_title">Ignore The Word</string>
  <string name="showcase_ignore_content">Words which marked as ignore never gonna shown  again</string>
  <string name="showcase_favorite_title">My Favorite Words</string>
  <string name="showcase_favorite_content">Your words will be added to your favorite list</string>
  <string name="words">Words</string>
  <string name="quiz_not_enough_word_content">First make sure to review words before taking quiz!</string>
  <string name="daily_reminder">Daily reminder</string>
  <string name="notification_review_title">Reminder</string>
  <string name="notification_review_content">Start your daily review !</string>
  <string name="review_result_quiz_title">Take quiz from reviewed words.</string>
  <string name="result_examine_no_wrong_message">You answered all of the questions correctly</string>
  <string name="welcome">Welcome</string>
  <string name="review_show_case_content">Slide to the left to move to the next word.</string>
  <string name="review_show_case_title">Next Word</string>
  <string name="showcase_image_title">Turkish Meaning</string>
  <string name="showcase_image_content">Touch the card to see word Turkish meaning</string>
  <string name="done">DONE</string>
  <string name="skip">SKIP</string>
  <string name="intro_review_title">WORD CARDS</string>
  <string name="intro_review_content">View cards of words with common usage. Mark what you like, what you know or think you are learning so that it is easier to access later</string>
  <string name="intro_quiz_title">QUIZ QUESTIONS</string>
  <string name="intro_quiz_content">Try yourself with the help of the exams you can set from English to English or English to English from the cards you see. If you trust yourself, you can increase the number of options</string>
  <string name="intro_settings_title">SETTINGS</string>
  <string name="intro_settings_content">Set the number of word cards to show in a session and customize the exam according to your own style. With the reminder, it is possible to do card exercises on a regular basis</string>
  <string name="toolbar_counter_title">%d / %d</string>
  <string name="landing_reviews_title">REVIEWS</string>
  <string name="landing_learnt_title">LEARNT</string>
  <string name="landing_bookmarked_title">FAVORITES</string>
  <string name="landing_all_learned_words_count_title">Learnt Words</string>
  <string name="landing_header_learnt_words">%d Words</string>
  <string name="insert_word_title">Add New Word</string>
  <string name="new_word">Word</string>
  <string name="new_meaning">Meaning</string>
  <string name="new_turkish">Turkish meaning</string>
  <string name="new_sentence">Sentence</string>
  <string name="new_type">Type (noun, verb, etc.)</string>
  <string name="word_is_required">Word is required</string>
  <string name="select_from_camera">Select from camera</string>
  <string name="select_from_gallery">Select from gallery</string>
  <string name="add_image">Add Image</string>
  <string name="word_already_has_been_added">This word already has been added. Please try another word</string>
  <string name="word_added_successfully">Word has been successfully added.</string>
  <string name="word_could_not_be_added">The word could not be added. Please try again.</string>
  <string name="word_min_length">Word length could not be less than %d</string>
</resources>
