<?xml version="1.0" encoding="utf-8"?>
<android.support.design.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/container"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:id="@+id/loading_layout"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/primary_dark"
        android:gravity="center"
        android:orientation="vertical"
        android:visibility="visible">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="90dp"
            android:text="@string/loading_words_content"
            android:textColor="@color/white"
            android:textSize="20sp" />

        <com.victor.loading.book.BookLoading
            android:id="@+id/book_loading"
            android:layout_width="150dp"
            android:layout_height="100dp" />

    </LinearLayout>

    <LinearLayout
        android:id="@+id/content_layout"
        android:layout_width="match_parent"
        android:visibility="gone"
        android:layout_height="match_parent"
        android:background="@drawable/review_bg"
        android:gravity="center"
        android:orientation="vertical">


        <android.support.v7.widget.CardView
            android:id="@+id/review_card"
            style="@style/menu_card_view"
            android:backgroundTint="@color/primary">

            <android.support.constraint.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <ImageView
                    android:id="@+id/review_image"
                    style="@style/landing_menu_image"
                    android:contentDescription="@string/landing_menu_learn_title"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintLeft_toLeftOf="parent"
                    app:layout_constraintTop_toTopOf="parent"
                    app:layout_constraintVertical_bias="0.39"
                    app:srcCompat="@drawable/ic_brain" />

                <TextView
                    android:id="@+id/learn_title"
                    style="@style/landing_card_title"
                    android:text="@string/landing_menu_learn_title"
                    app:layout_constraintLeft_toRightOf="@+id/review_image"
                    app:layout_constraintTop_toTopOf="@+id/review_image" />

                <TextView
                    android:id="@+id/learn_subtitle"
                    style="@style/landing_card_subtitle"
                    android:layout_marginBottom="0dp"
                    android:layout_marginLeft="16dp"
                    android:layout_marginStart="16dp"
                    android:text="@string/landing_menu_learn_subtitle"
                    app:layout_constraintBottom_toBottomOf="@+id/review_image"
                    app:layout_constraintLeft_toRightOf="@id/review_image" />

            </android.support.constraint.ConstraintLayout>

        </android.support.v7.widget.CardView>

        <android.support.v7.widget.CardView
            android:id="@+id/word_card_test"
            style="@style/menu_card_view"
            tools:backgroundTint="@color/red">

            <android.support.constraint.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <ImageView
                    android:id="@+id/quiz_image"
                    style="@style/landing_menu_image"
                    android:layout_marginLeft="16dp"
                    android:layout_marginStart="16dp"
                    android:contentDescription="@string/landing_menu_take_quize_title"
                    app:srcCompat="@drawable/ic_quiz"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintLeft_toLeftOf="parent"
                    app:layout_constraintTop_toTopOf="parent"
                    app:layout_constraintVertical_bias="0.5" />

                <TextView
                    android:id="@+id/quiz_title"
                    style="@style/landing_card_title"
                    android:text="@string/landing_menu_take_quize_title"
                    app:layout_constraintLeft_toRightOf="@id/quiz_image"
                    app:layout_constraintTop_toTopOf="@id/quiz_image" />

                <TextView
                    android:id="@+id/quiz_subtitle"
                    style="@style/landing_card_subtitle"
                    android:layout_marginBottom="0dp"
                    android:text="@string/landing_menu_quiz_subtitle"
                    app:layout_constraintBottom_toBottomOf="@+id/quiz_image"
                    app:layout_constraintLeft_toRightOf="@id/quiz_image" />

            </android.support.constraint.ConstraintLayout>

        </android.support.v7.widget.CardView>

        <android.support.v7.widget.CardView
            android:id="@+id/settings_card"
            style="@style/menu_card_view"
            android:backgroundTint="@color/menu_blue">

            <android.support.constraint.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <ImageView
                    android:id="@+id/settings_image"
                    style="@style/landing_menu_image"
                    android:layout_marginLeft="16dp"
                    android:layout_marginStart="16dp"
                    android:contentDescription="@string/landing_menu_take_quize_title"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintLeft_toLeftOf="parent"
                    app:layout_constraintTop_toTopOf="parent"
                    app:layout_constraintVertical_bias="0.5"
                    app:srcCompat="@drawable/ic_settings" />

                <TextView
                    android:id="@+id/settings_title"
                    style="@style/landing_card_title"
                    android:text="@string/landing_menu_settings_title"
                    app:layout_constraintLeft_toRightOf="@id/settings_image"
                    app:layout_constraintTop_toTopOf="@id/settings_image" />

                <TextView
                    android:id="@+id/settings_subtitle"
                    style="@style/landing_card_subtitle"
                    android:layout_marginBottom="0dp"
                    android:layout_marginLeft="16dp"
                    android:layout_marginStart="16dp"
                    android:text="@string/landing_menu_settings_subtitle"
                    app:layout_constraintBottom_toBottomOf="@+id/settings_image"
                    app:layout_constraintLeft_toRightOf="@id/settings_image" />

            </android.support.constraint.ConstraintLayout>

        </android.support.v7.widget.CardView>

    </LinearLayout>
</android.support.design.widget.CoordinatorLayout>
