<androidx.coordinatorlayout.widget.CoordinatorLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:focusableInTouchMode="true"
    android:orientation="vertical"

    >
  <com.google.android.material.appbar.AppBarLayout
      android:layout_width="match_parent"
      android:layout_height="wrap_content"
      android:theme="@style/AppThemeMaterial.AppBarOverlay"
      >

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/toolbarNewWord"
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        android:background="@color/landing_plus"
        />

  </com.google.android.material.appbar.AppBarLayout>

  <ScrollView
      android:layout_width="match_parent"
      android:layout_height="match_parent"
      android:layout_marginTop="?actionBarSize"
      android:fillViewport="true"
      >
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="16dp"
        android:layout_marginRight="16dp"
        android:orientation="vertical"
        android:paddingBottom="100dp"
        >

      <!-- word -->
      <androidx.coordinatorlayout.widget.CoordinatorLayout
          android:layout_width="match_parent"
          android:layout_height="wrap_content"
          android:layout_marginTop="@dimen/new_word_row_margin_top"
          >

        <ImageView
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:srcCompat="@drawable/ic_contract"
            style="@style/new_word_icon"
            />
        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/inputLayoutWord"
            app:errorEnabled="true"
            style="@style/new_word_input_layout"
            >

          <com.google.android.material.textfield.TextInputEditText
              android:id="@+id/inputWord"
              android:hint="@string/new_word"
              style="@style/new_word_input"
              />
        </com.google.android.material.textfield.TextInputLayout>
      </androidx.coordinatorlayout.widget.CoordinatorLayout>

      <!--turkish-->
      <androidx.coordinatorlayout.widget.CoordinatorLayout
          android:id="@+id/constraintTurkish"
          android:layout_width="match_parent"
          android:layout_height="wrap_content"
          android:layout_marginTop="@dimen/new_word_row_margin_top"
          >

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:srcCompat="@drawable/ic_contract"
            />
        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/inputLayoutTurkish"
            app:errorEnabled="true"
            style="@style/new_word_input_layout"
            >
          <EditText
              android:id="@+id/inputTurkish"
              android:hint="@string/new_turkish"
              style="@style/new_word_input"
              />
        </com.google.android.material.textfield.TextInputLayout>
      </androidx.coordinatorlayout.widget.CoordinatorLayout>

      <!--meaning-->
      <androidx.coordinatorlayout.widget.CoordinatorLayout
          android:layout_width="match_parent"
          android:layout_height="wrap_content"
          android:layout_marginTop="@dimen/new_word_row_margin_top"
          >

        <ImageView
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:srcCompat="@drawable/ic_contract"
            style="@style/new_word_icon"
            />
        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/inputLayoutMeaning"
            app:errorEnabled="true"
            style="@style/new_word_input_layout"
            >
          <EditText
              android:id="@+id/inputMeaning"
              android:hint="@string/new_meaning"
              style="@style/new_word_input"
              />
        </com.google.android.material.textfield.TextInputLayout>
      </androidx.coordinatorlayout.widget.CoordinatorLayout>

      <!--sentence-->
      <com.google.android.material.textfield.TextInputLayout
          android:layout_width="match_parent"
          android:layout_height="wrap_content"
          android:layout_marginTop="@dimen/new_word_row_margin_top"
          >

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:srcCompat="@drawable/ic_contract"
            />
        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/inputLayoutSentence"
            app:errorEnabled="true"
            style="@style/new_word_input_layout"
            >
          <EditText
              android:id="@+id/inputSentence"
              android:hint="@string/new_sentence"
              style="@style/new_word_input"
              />
        </com.google.android.material.textfield.TextInputLayout>
      </com.google.android.material.textfield.TextInputLayout>

      <!--type-->
      <com.google.android.material.textfield.TextInputLayout
          android:layout_width="match_parent"
          android:layout_height="wrap_content"
          android:layout_marginTop="@dimen/new_word_row_margin_top"
          >

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:srcCompat="@drawable/ic_contract"
            />
        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/inputLayoutType"
            app:errorEnabled="true"
            style="@style/new_word_input_layout"
            >
          <EditText
              android:id="@+id/inputType"
              android:hint="@string/new_type"
              style="@style/new_word_input"
              />
        </com.google.android.material.textfield.TextInputLayout>
      </com.google.android.material.textfield.TextInputLayout>

      <!--image upload-->
      <FrameLayout
          android:id="@+id/frameImageSection"
          android:layout_width="match_parent"
          android:layout_height="100dp"
          android:background="@drawable/add_file_bg"
          android:layout_marginTop="16dp"
          >

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/add_image"
            android:drawableTop="@drawable/ic_add_image"
            android:drawablePadding="16dp"
            android:layout_gravity="center"
            android:textSize="18sp"
            />

      </FrameLayout>

      <ImageView
          android:id="@+id/imageSelected"
          android:layout_width="match_parent"
          android:layout_height="150dp"
          android:layout_marginLeft="32dp"
          android:layout_marginRight="32dp"
          android:layout_marginTop="32dp"
          android:scaleType="fitXY"
          android:visibility="gone"
          />


    </LinearLayout>

  </ScrollView>

  <include layout="@layout/choose_photo_source"/>

</androidx.coordinatorlayout.widget.CoordinatorLayout>
